Fix responsive submenu wrapping (#1284)
Fix #1283

--- a/wcomponents-theme/src/main/sass/_wc.menu.respond.scss
+++ b/wcomponents-theme/src/main/sass/_wc.menu.respond.scss
@@ -10,6 +10,7 @@
         overflow: auto;
         position: fixed;
         top: 0;
+        white-space: normal;
         width: 100%;
 
         > [role] {
